add vendor details and order related routes

--- a/VendorAndOrderTracker/wwwroot/css/styles.css
+++ b/VendorAndOrderTracker/wwwroot/css/styles.css
@@ -31,6 +31,16 @@ h3 {
   color: olive;
 }
 
+
+h6 {
+  padding-left: 12px;
+  text-align: left !important;
+  color: olive;
+  /* margin:auto;
+  width: 100%;
+  text-align: right; */
+}
+
 .orderList {
   padding-left: 10px;
   text-align: left;
